vertically blurred image, image size > 768px fixed

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,13 @@
 
 main {
   background-image: linear-gradient(
+      to bottom,
+      black,
+      rgba(0, 0, 0, 0) 25%,
+      rgba(0, 0, 0, 0) 75%,
+      black
+    ),
+    linear-gradient(
       to right,
       black,
       rgba(0, 0, 0, 0) 25%,
@@ -54,7 +61,7 @@ main {
     url(../public/ded.png);
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: 600px 600px;
+  background-size: 700px 700px;
   height: 90vh;
   background-color: black;
 }
